v0.4 - 200204XX
~~~~~~~~~~~~~~~
o More or less rewritten from scratch.
o Removed several stupid command line options.
o Update all files matching a regexp (see config file).
o Skip diffing files matching another regexp (see config file).
o Added option -p to preserve disabled rules in downloaded archive.



v0.3 - never
~~~~~~~~~~~~
o The file rules.ignore has been renamed to oinkmaster.conf.
  ("rules.ignore" will no longer be searched for.)
o Slightly improved error checking.
o Better output format (or at least it has changed).
o Oinkmaster will now also update other files (and print changes in them) than
  *.rules and classification.conf. It's now *.rules, *.conf, *.config, *.txt
  and *.map so we also update the MIB and sid-msg.map files for example.
  Snort.conf is disabled in oinkmaster.conf by default though, so we 
  don't overwrite our own config.
o Various minor bug fixes and tweaks.
o Some documentation updates.



v0.2 - 20010906
~~~~~~~~~~~~~~~
o Added optional "-a <attempts>" argument (which is passed to wget's "-t" argument)
  to configure maximum number of download retries before giving up.
o Warning message will be printed if there is any invalid line in the ignore file.
o Fixed a few stupid bugs.
o Default URL is now http://www.snort.org/downloads/snortrules.tar.gz
  PLEASE be aware of the following description of the rules in the above archive:
  "This is a CVS snapshot of the snort signatures every 30 minutes.
  NOTE: These signatures may only work with snort-current"



v0.1 - 20010726
~~~~~~~~~~~~~~~
o Initial release.