@@ -2,6 +2,7 @@ v0.4 - 200204XX
 ~~~~~~~~~~~~~~~
 o More or less rewritten from scratch.
 o Removed several stupid command line options.
+o Print warning message if two (or more) rules share the same SID.
 o Update all files matching a regexp (see config file).
 o Skip diffing files matching another regexp (see config file).
 o Added option -p to preserve disabled rules in downloaded archive.
